Better margin bottom in web template.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
       right: 0;
     }
 
+    .game_container:not(.using_touch) {
+      margin-bottom: 5rem;
+    }
+
     .game_container canvas {
       border: 1px solid white;
       margin: 1rem;
