--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
       line-height: 1.8rem;
     }
 
+    ul {
+      max-width: 500px;
+      text-align: left;
+    }
+
+    ul li {
+      line-height: 2rem;
+    }
+
     .main {
       margin-left: auto;
       margin-right: auto;
@@ -304,6 +313,17 @@
         </div>
       </div>
     </div>
+    <p>
+      Controls:
+      <ul>
+        <li>Hold Î (Z) or × (X) to crouch</li>
+        <li>Release both Î and × to do an ollie</li>
+        <li>Hold Î while above the wall to perform a 5-0 (tail) grind</li>
+        <li>Hold × to perform a nosegrind</li>
+        <li>Rack up more points by alternating grinds</li>
+        <li>Chain together grinds to max out your power meter - and blow that wall to smithereens!</li>
+      </ul>
+    </p>
     <p>Thanks to <a href="https://www.lexaloffle.com/bbs/?tid=3760">RhythmLynx</a> for making the PICO-8 font available on the web, and to <a href="https://twitter.com/lexaloffle">Zep</a> for developing it!</p>
   </center>
 
