Link colors fit PICO-8 palette.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       font-size: 20px;
     }
     body {
-      background-color: #5e564e;
+      background-color: #5e564e; /* pico-8 dark-gray */
       font-family: Softsquare;
       color: white;
       box-sizing: border-box;
@@ -50,6 +50,13 @@
     }
     a {
       font-size: 1.1em;
+      color: #29adff; /* pico-8 blue */
+    }
+    a:active {
+      color: #ffa300 !important; /* pico-8 orange */
+    }
+    a:visited {
+      color: #83769c; /* pico-8 indigo */
     }
     .main {
       margin-left: auto;
@@ -124,7 +131,7 @@
       color: white;
       padding: 0.5rem 1rem;
       font-family: Softsquare;
-      background-color: rgb(255, 0, 77);
+      background-color: #ff004d; /* pico-8 red */
       border: 3px solid white;
       border-radius: 15px;
       cursor: pointer;
@@ -234,7 +241,7 @@
     }
     .game_area .control_btn button {
       font-family: 'PICO-8';
-      background-color: rgb(255, 0, 77);
+      background-color: #ff004d; /* pico-8 red */
       border: 2px solid white;
       border-radius: 50%;
       width: 2.6rem;
