Using updated font with French characters.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     @font-face {
       font-family: Softsquare;
-      src: url('ChevyRay - Softsquare.ttf');
+      src: url('ChevyRay - Softsquare FR.ttf');
     }
     body,
     html {
