Update web page with new slogan.

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <div class="status"></div>
   </div>
   <center class="main">
-    <h1 id="slogan">Bust Up the Border Wall!</h1>
+    <h1 id="slogan">Lay that Wall to Waste!</h1>
     <p>Sk8Border was created in Montréal in March/April 2018 for the <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>.</p>
     <p>TODO: plus d'infos</p>
     <p>This game runs in your web browser - even on your phone!</p>
