--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
   </div>
   <center class="main">
     <h1 id="slogan">Lay that Wall to Waste!</h1>
-    <p>Sk8Border was created in Montréal in March/April 2018 for the <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>.</p>
+    <p>Sk8Border was created in Montréal in March/April 2018 for the <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>. It is built with <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
     <p>TODO: plus d'infos</p>
     <p>This game runs in your web browser - even on your phone!</p>
     <button id="play_game">Let's Go!</button>
