Added opengraph tags.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Sk8Border</title>
   <meta name="description" content="Sk8Border">
+  <meta property="og:title" content="Sk8Border" />
+  <meta property="og:url" content="https://sk8border.github.io/sk8border/" />
+  <meta property="og:image" content="https://sk8border.github.io/sk8border/sk8border_logo.png" />
 
   <style>
     @font-face {
