Updated page description.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Sk8Border</title>
-  <meta name="description" content="Sk8Border">
+  <meta name="description" content="Lay that Wall to Waste!">
   <meta property="og:title" content="Sk8Border" />
+  <meta property="og:description" content="Lay that Wall to Waste!">
   <meta property="og:url" content="https://sk8border.github.io/sk8border/" />
   <meta property="og:image" content="https://sk8border.github.io/sk8border/sk8border_logo.png" />
 
