Wall collapse vibration lasts a bit longer.

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
           // vibrate based on destruction level
           if (_destructionLevel === 6) {
             // wall is falling
-            navigator.vibrate([40, 10, 40, 10, 40, 10, 40, 10, 60]);
+            navigator.vibrate([40, 10, 40, 10, 40, 10, 40, 10, 40, 10, 40]);
           } else {
             vibrateInterval =
               setInterval(grindVibration(_destructionLevel), 960);
