--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
           if (_destructionLevel === 6) {
             // wall is falling
             navigator.vibrate([40, 10, 40, 10, 40, 10, 40, 10, 40, 10, 40]);
-          } else {
+          } else if (playerStates[_playerState] === 'grind') {
             vibrateInterval =
               setInterval(grindVibration(_destructionLevel), 960);
           }
